# oppgave

./: .travis.yml  Cargo.toml  Makefile  README.md  index.html  search-index.js
examples/: bench.rs  producer.rs  worker.rs
oppgave/: index.html  sidebar-items.js  struct.Queue.html  struct.TaskGuard.html  trait.TaskDecodable.html  trait.TaskEncodable.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
redis/: enum.ConnectionAddr.html  enum.ErrorKind.html  enum.NumericBehavior.html  enum.Value.html  fn.cmd.html  fn.from_redis_value.html  fn.pack_command.html  fn.parse_redis_url.html  fn.parse_redis_value.html  fn.pipe.html  fn.transaction.html  index.html  struct.Client.html  struct.Cmd.html  struct.Connection.html  struct.ConnectionInfo.html  struct.InfoDict.html  struct.Iter.html  struct.Msg.html  struct.Parser.html  struct.Pipeline.html  struct.PubSub.html  struct.RedisError.html  struct.Script.html  struct.ScriptInvocation.html  trait.Commands.html  trait.ConnectionLike.html  trait.FromRedisValue.html  trait.IntoConnectionInfo.html  trait.PipelineCommands.html  trait.ToRedisArgs.html  type.RedisResult.html
rustc_serialize/json/: struct.Parser.html
src/: lib.rs
src/byteorder/: lib.rs.html  new.rs.html
src/redis/: client.rs.html  cmd.rs.html  commands.rs.html  connection.rs.html  lib.rs.html  macros.rs.html  parser.rs.html  script.rs.html  types.rs.html
src/url/: encode_sets.rs.html  encoding.rs.html  form_urlencoded.rs.html  format.rs.html  host.rs.html  idna.rs.html  lib.rs.html  parser.rs.html  percent_encoding.rs.html  punycode.rs.html  (+1 more)
(+17 files in other folders)
