[package]
name = "oppgave"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

keywords = ["queue", "redis"]
description = "A simple Redis-based task queue"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/oppgave"
repository = "https://github.com/badboy/oppgave"
documentation = "https://badboy.github.io/oppgave"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "src/**/*",
  "examples/**/*"
]

[dependencies]
redis = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
libc = "0.2.7"
clippy = {version = "*", optional = true}
